# DeepXDR

./: .gitignore  LICENSE  README.md  README_EN.md
ai_agent/: .dockerignore  Dockerfile  README.md  README_EN.md  main.py  pyproject.toml
ai_agent/.cache/mitre_attack/: catalog_18.1_no_procedures.json  catalog_18.1_with_procedures.json  text-embedding-v4_18.1_with_procedures.npy
ai_agent/agent_guard/: __init__.py  adjudicator.py  command_runner.py  config.py  consumer.py  context_planner.py  diff_parser.py  diff_store.py  nono_wrapper.py  publisher.py  repository.py  rollback.py  rule_engine.py  service.py  sql_repository.py  worker.py
ai_agent/api_server/: __init__.py  main.py  routes.py  schemas.py
ai_agent/data_consumer/: __init__.py  kafka_consumer.py
ai_agent/defense/: README_MCP.md  README_nginx.md  __init__.py  custom_403.html  defense_manager.py  deploy_mcp_server.sh  mcp-server.service  mcp_client.py  mcp_server.py  nginx.conf
ai_agent/mitre_attck_agent/: README.md  attack_rag.py  schemas.py
ai_agent/mitre_attck_agent/agents/: report_agent.py
ai_agent/mitre_attck_agent/reporting/: incident_report.md
ai_agent/mitre_attck_agent/workflows/: graph.py  nodes.py  run_workflow.py  state.py
ai_agent/shared/: __init__.py
ai_agent/shared/database/: __init__.py  bootstrap.py  checkpointer.py  connection.py  elastic_repositories.py  elasticsearch_client_v8.py  es_common.py  models.py  repositories.py
ai_agent/shared/models/: events.py  ttp.py
ai_agent/shared/utils/: __init__.py  config.py  elasticsearch_config.py  logger.py  timezone.py  validation.py
ai_agent/ttp_generator/: __init__.py  dx_analyzer_api.py  human_feedback_session.py  short_ttp_generator.py  short_ttp_workflow.py  window_manager.py
ai_agent/ttp_generator/dx_analyzer/: MITRE_SUBGRAPH_GUIDE.md  __init__.py  configuration.py  deep_researcher.py  mitre_investigation_prompts.py  prompts.py  state.py  utils.py
baseline_adjudication/: .dockerignore  .gitignore  Dockerfile  README.md  anomaly_detector.py  requirements.txt
deploy/: docker-compose-agent.yml  docker-compose-app.yml
tests/: conftest.py  test_attack_rag_workflow.py  test_cleanup_baseline.py  test_defense_manager.py  test_kafka_consumer_offsets.py  test_long_ttp_mitre_result.py  test_mcp_client_env.py  test_mcp_server_security.py  (+3 more)
(+27 files in other folders)
