[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-analysis"
version = "1.0.0"
description = "基于深度行为裁决的AI辅助安全分析系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PMLabs Technology Co., Ltd."}
]
requires-python = ">=3.11"

dependencies = [
    # Core async & infra
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "sqlalchemy==2.0.32",
    "asyncpg==0.29.0",
    "redis==5.0.8",
    "aiokafka==0.11.0",
    "uvloop==0.21.0",
    "psycopg2-binary==2.9.10",
    # Web
    "fastapi==0.115.0",
    "uvicorn==0.40.0",
    # LangGraph / LangChain core
    "langgraph==0.5.4",
    "langchain-core==0.3.70",
    "langchain>=0.3.26,<1.0.0",
    "langchain-community==0.3.27",
    # LLM providers
    "langchain-openai==0.3.28",
    "langchain-anthropic==0.3.15",
    "langchain-deepseek==0.1.2",
    "langchain-groq==0.2.4",
    "langchain-mcp-adapters==0.1.14",
    # Research / search tools
    "langchain-tavily==0.2.16",
    "tavily-python==0.5.0",
    "duckduckgo-search==3.0.2",
    "exa-py==1.8.8",
    "arxiv==2.1.3",
    "linkup-sdk==0.2.3",
    # OpenAI SDK
    "openai==1.99.2",
    # Document / parsing
    "pymupdf==1.25.3",
    "xmltodict==0.14.2",
    "beautifulsoup4==4.13.3",
    "markdownify==0.11.6",
    "requests==2.32.3",
    "httpx==0.28.1",
    # Data
    "pandas==2.3.1",
    "pytz==2023.3",
    "python-dateutil==2.9.0",
    # Observability / CLI
    "rich>=13.8.0,<14.0.0",
    # Cloud SDK
    "azure-identity==1.21.0",
    "azure-search-documents==11.5.2",
    # Others
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "supabase==2.15.3",
    "mcp==1.25.0",
    # ElasticSearch
    "elasticsearch>=8.0.0,<9.0.0",
    # Database migrations
    "alembic==1.13.2",
    # Additional dependencies
    "mitreattack-python",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api_server*",
    "data_consumer*",
    "defense*",
    "mitre_attck_agent*",
    "shared*",
    "ttp_generator*",
]
